[package]
name = "task-sched"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.3"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "process", "macros", "fs", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.6.0"
